<resources>
    <string name="app_name">E03</string>
    <string name="txt_codigo">Código del producto</string>
    <string name="txt_nombre">Nombre de la prenda</string>
    <string name="txt_categoria">Categoría</string>
    <string name="txt_talla">Talla</string>
    <string name="txt_precio">Precio</string>
    <string name="btn_registrar">Registrar Producto</string>
    <string name="btn_buscar">Buscar Producto</string>
    <string name="btn_modificar">Modificar Producto</string>
    <string name="btn_eliminar">Eliminar Producto</string>
</resources>